log

Wed 16 Aug 2023 09:45:10 PM UTC: 
 tests:  0|7
total_score: 0/70
8373ec1
Wed 16 Aug 2023 10:07:07 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:17: error: ‘tamaño’ undeclared (first use in this function)
   14 |   for(int i=0;i<tamaño;i++){
      |                 ^~~~~~
exercises.c:14:17: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:16:19: error: expected ‘;’ before ‘}’ token
   16 |       mayor=arr[i]
      |                   ^
      |                   ;
   17 |     }
      |     ~              
Compilation failed
7393c7b
Wed 16 Aug 2023 10:07:41 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
50c22a6
Wed 16 Aug 2023 10:12:20 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
28c02d2
Wed 16 Aug 2023 11:10:04 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:30:15: error: expected ‘;’ before ‘arr’
   30 |     aux=arr[i]
      |               ^
      |               ;
   31 |     arr[i]=arr[size-i]
      |     ~~~        
exercises.c:28:7: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   28 |   int aux=0;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
52563ca
Wed 16 Aug 2023 11:10:14 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
060f3cc
Wed 16 Aug 2023 11:16:06 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 20/70
8277af7
Thu 17 Aug 2023 12:27:35 AM UTC: 
 exercises.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
test.c: In function ‘test_filterEvenNumbers’:
test.c:151:19: error: implicit declaration of function ‘filterEvenNumbers’; did you mean ‘test_filterEvenNumbers’? [-Werror=implicit-function-declaration]
  151 |     int *result = filterEvenNumbers(arr, size, &newSize);
      |                   ^~~~~~~~~~~~~~~~~
      |                   test_filterEvenNumbers
test.c:151:19: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
5fc2d13
Thu 17 Aug 2023 12:28:03 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
a7ae49d
Thu 17 Aug 2023 01:07:26 AM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:89:36: error: ‘MAX_TITULO_LENGTH’ undeclared (first use in this function)
   89 |     strncpy(libro->titulo, titulo, MAX_TITULO_LENGTH - 1);
      |                                    ^~~~~~~~~~~~~~~~~
exercises.c:89:36: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:92:47: error: ‘MAX_AUTOR_LENGTH’ undeclared (first use in this function)
   92 |     strncpy(libro->autor.nombre, nombreAutor, MAX_AUTOR_LENGTH - 1);
      |                                               ^~~~~~~~~~~~~~~~
exercises.c:95:25: error: ‘Autor’ has no member named ‘apellido’
   95 |     strncpy(libro->autor.apellido, apellidoAutor, MAX_AUTOR_LENGTH - 1);
      |                         ^
exercises.c:95:36: error: ‘apellidoAutor’ undeclared (first use in this function)
   95 |     strncpy(libro->autor.apellido, apellidoAutor, MAX_AUTOR_LENGTH - 1);
      |                                    ^~~~~~~~~~~~~
exercises.c:96:17: error: ‘Autor’ has no member named ‘apellido’
   96 |     libro->autor.apellido[MAX_AUTOR_LENGTH - 1] = '\0';
      |                 ^
Compilation failed
5f0eaef
Thu 17 Aug 2023 01:10:19 AM UTC: 
 exercises.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  0|3
total_score: 40/70
ef3284e
Thu 17 Aug 2023 01:38:54 AM UTC: 
 exercises.c | 27 +++++++++++++++++++++------
 1 file changed, 21 insertions(+), 6 deletions(-)
 tests:  0|2
total_score: 50/70
75da38d
